--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+git clone https://github.com/拜1639/仓库名.git
+cd 仓库名
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,4 +15,8 @@
   <img src="https://esp32-cam-monitor.oss-cn-shanghai.aliyuncs.com/snapshots/current.jpg" alt="CAM画面"/>
   <p>每5秒自动刷新</p>
 </body>
+
 </html>
+git add .
+git commit -m "上传网页"
+git push
