Update repository and HTML content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-git clone https://github.com/拜1639/仓库名.git
-cd 仓库名
+git clone https://github.com/拜1639/我的网站.git
+cd 我的网站
 <!DOCTYPE html>
 <html>
 <head>
@@ -20,3 +20,4 @@ cd 仓库名
 git add .
 git commit -m "上传网页"
 git push
+
