--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-git clone https://github.com/拜1639/我的网站.git
-cd 我的网站
+git clone https://github.com/bai1639/my-website.git
+cd my-website
 <!DOCTYPE html>
 <html>
 <head>
@@ -20,4 +20,5 @@ cd 我的网站
 git add .
 git commit -m "上传网页"
 git push
+
 
