--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ cd my-website
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>答案之书 — 现场揭晓（自动）</title>
+  <title>答案之书 — 自动揭晓（已修复）</title>
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..72,400;8..72,700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -31,6 +31,7 @@ cd my-website
       color:var(--card);
       overflow:hidden;
     }
+
     .blob{ position:absolute; width:520px; height:520px; border-radius:50%; filter: blur(60px); opacity:0.18; transform: translate3d(0,0,0); mix-blend-mode: screen; pointer-events:none; }
     .blob.a{background:linear-gradient(90deg,#ff6b6b,#ffb86b); left:-120px; top:-80px; animation: floatA 8s ease-in-out infinite;}
     .blob.b{background:linear-gradient(90deg,#5bd3ff,#6b8cff); right:-140px; bottom:-100px; animation: floatB 10s ease-in-out infinite;}
@@ -57,11 +58,10 @@ cd my-website
 
     .reveal{ margin-top:12px; display:grid; gap:10px; align-content:center; flex:1; }
     .answer{ font-family:"Source Serif 4", serif; font-size:20px; color:#222; background:linear-gradient(180deg,#fff,#fff); padding:16px; border-radius:10px; min-height:96px; display:grid; align-items:center; justify-items:center; text-align:center; box-shadow: 0 8px 30px rgba(11,22,40,0.06); overflow:hidden; position:relative; }
-    .answer .text{ color:#111; opacity:0; transform:translateY(6px); transition: all 420ms cubic-bezier(.2,.9,.28,1) 220ms; line-height:1.5; padding:0 6px; }
+    .answer .text{ color:#111; opacity:0; transform:translateY(6px); transition: all 420ms cubic-bezier(.2,.9,.28,1) 120ms; line-height:1.5; padding:0 6px; white-space:pre-wrap; word-break:break-word; }
     .answer.show .text{ opacity:1; transform:translateY(0); }
 
     .meta{ display:flex; justify-content:space-between; align-items:center; margin-top:8px; color:var(--muted); font-size:13px; }
-
     .bookmark{ position:absolute; right:18px; top:14px; width:48px; height:64px; background:linear-gradient(180deg,#fff3e6, #fff); border-radius:6px; box-shadow: 0 6px 18px rgba(0,0,0,0.06); display:grid; place-items:center; font-weight:700; color:var(--accent); }
 
     .btn{ padding:10px 14px; border-radius:10px; border:none; cursor:pointer; display:inline-flex; align-items:center; gap:8px; font-weight:600; font-size:14px; }
@@ -88,14 +88,14 @@ cd my-website
       <div class="brand">
         <div class="logo">答</div>
         <div>
-          <h1 id="main-title">答案之书 <span style="font-size:13px; color:var(--muted); font-weight:600;">— 自动揭晓</span></h1>
-          <p class="lead">打开页面即可自动展示一句引导性的答案，页面保留“再来一条”用于获取新的灵感。</p>
+          <h1 id="main-title">答案之书 <span style="font-size:13px; color:var(--muted); font-weight:600;">— 自动揭晓（已修复）</span></h1>
+          <p class="lead">打开页面即可自动展示一句引导性的答案；保留“再来一条”以获取新灵感。</p>
         </div>
       </div>
 
-      <p style="color:var(--muted); margin-top:12px;">提示：这是无输入版本 —— 页面打开即会显示答案；也可点击“再来一条”获得另一条提示。</p>
+      <p style="color:var(--muted); margin-top:12px;">如果你想要页面在打开时显示特定类别的答案（例如只显示“感情”类），告诉我即可我做定制。</p>
 
-      <footer class="note">可托管在任意静态站点（GitHub Pages / Netlify / Vercel 等）。</footer>
+      <footer class="note">保存为 index.html 后直接打开或部署到任意静态站点。</footer>
     </section>
 
     <aside class="book-wrap" aria-label="答案书">
@@ -104,19 +104,13 @@ cd my-website
           <div class="page front" id="front">
             <div class="bookmark" aria-hidden="true">今</div>
 
-            <div style="display:flex; gap:12px; align-items:center; margin-bottom:8px;">
-              <!-- 隐藏输入：保留结构以便未来扩展，但对用户不可见 -->
-              <input id="question" class="question-input" type="search" placeholder="" aria-hidden="true" style="display:none;">
-              <button id="revealBtn" class="btn primary" title="揭晓答案" aria-hidden="true" style="display:none;">揭晓</button>
-            </div>
-
             <div class="reveal">
               <div class="answer" id="answerFront" role="status" aria-live="polite">
-                <div class="text" id="answerText">正在聆听……</div>
+                <div class="text" id="answerText">正在准备答案……</div>
               </div>
 
               <div class="meta">
-                <div id="category" style="text-transform:capitalize;color:var(--muted)">类别：自动 / 随机</div>
+                <div id="category" style="text-transform:capitalize;color:var(--muted)">类别：自动</div>
                 <div style="display:flex; gap:8px;">
                   <button id="anotherBtn" class="btn ghost" aria-label="再来一条">再来一条</button>
                 </div>
@@ -125,11 +119,11 @@ cd my-website
           </div>
 
           <div class="page back" id="back" aria-hidden="true">
-            <div style="font-size:14px;color:var(--muted);margin-bottom:10px;">答案之书 · 智能揭晓</div>
+            <div style="font-size:14px;color:var(--muted);margin-bottom:10px;">答案之书 · 说明</div>
             <div style="flex:1; display:flex; align-items:center; justify-content:center;">
               <div style="text-align:center; max-width:320px;">
-                <h2 style="font-family:'Source Serif 4', serif; margin:6px 0;">你的答案</h2>
-                <p style="color:var(--muted); line-height:1.6; font-size:15px;">页面自动从丰富的语句库中抽取一句启发性的建议。每次刷新或点击“再来一条”都会给出新内容。</p>
+                <h2 style="font-family:'Source Serif 4', serif; margin:6px 0;">自动揭晓</h2>
+                <p style="color:var(--muted); line-height:1.6; font-size:15px;">页面会从内置语句库中抽取一句启发性的建议。每次刷新或点击“再来一条”生成新答案。</p>
               </div>
             </div>
             <div style="display:flex; gap:8px; justify-content:flex-end;">
@@ -142,7 +136,7 @@ cd my-website
   </main>
 
   <script>
-    /* ===== 数据与映射（可按需扩展） ===== */
+    // 答案库（可按需扩充）
     const ANSWERS = {
       love: [
         "真心与时间，会让答案逐渐明朗。",
@@ -182,15 +176,7 @@ cd my-website
       ]
     };
 
-    const KEYWORD_MAP = [
-      {k: ["爱","喜欢","分手","恋","在一起","感情","对象","他","她"], cat:"love"},
-      {k: ["工作","跳槽","面试","职业","升职","事业","公司"], cat:"career"},
-      {k: ["投资","钱","理财","工资","买房","财富","开支"], cat:"money"},
-      {k: ["病","健康","体检","精神","锻炼","睡眠"], cat:"health"},
-      {k: ["吗","会不会","能否","能不能"], cat:"yesno"}
-    ];
-
-    /* ===== DOM ===== */
+    // DOM 元素
     const answerText = document.getElementById('answerText');
     const answerFront = document.getElementById('answerFront');
     const categoryEl = document.getElementById('category');
@@ -200,50 +186,57 @@ cd my-website
     const confettiCanvas = document.getElementById('confetti');
     const ctx = confettiCanvas.getContext('2d');
 
-    /* ===== Canvas resize ===== */
+    // 画布适配 DPI（稳健）
     function resizeCanvas(){
-      confettiCanvas.width = window.innerWidth * devicePixelRatio;
-      confettiCanvas.height = window.innerHeight * devicePixelRatio;
-      confettiCanvas.style.width = window.innerWidth + 'px';
-      confettiCanvas.style.height = window.innerHeight + 'px';
-      ctx.setTransform(devicePixelRatio,0,0,devicePixelRatio,0,0);
+      try {
+        const dpr = Math.max(1, window.devicePixelRatio || 1);
+        confettiCanvas.width = Math.round(window.innerWidth * dpr);
+        confettiCanvas.height = Math.round(window.innerHeight * dpr);
+        confettiCanvas.style.width = window.innerWidth + 'px';
+        confettiCanvas.style.height = window.innerHeight + 'px';
+        ctx.resetTransform();
+        ctx.scale(dpr, dpr);
+      } catch (e) {
+        // old browsers fallback
+        confettiCanvas.width = window.innerWidth;
+        confettiCanvas.height = window.innerHeight;
+      }
     }
     resizeCanvas();
-    window.addEventListener('resize', () => { setTimeout(resizeCanvas, 120); });
+    window.addEventListener('resize', () => setTimeout(resizeCanvas, 120));
 
-    /* ===== Helpers ===== */
     function pickRandom(arr){ return arr[Math.floor(Math.random()*arr.length)]; }
 
     function getRandomAnswer(){
-      // 从所有类别中随机抽取一个答案，并返回所属类别
       const cats = Object.keys(ANSWERS);
       const cat = cats[Math.floor(Math.random()*cats.length)];
-      const text = pickRandom(ANSWERS[cat].concat(ANSWERS.generic));
+      // 从该类别和 generic 混合选择，增加多样性
+      const pool = ANSWERS[cat].concat(ANSWERS.generic);
+      const text = pickRandom(pool);
       return {text, cat};
     }
 
-    async function revealAnswerAuto(fullText, catLabel){
-      // 打开书并执行打字动画
-      bookEl.classList.add('open');
-      answerFront.classList.remove('show');
-      await new Promise(r=>setTimeout(r, 420));
-      answerText.textContent = "";
-      const chars = Array.from(fullText);
-      for(let i=0;i<chars.length;i++){
-        answerText.textContent += chars[i];
-        if(i%5===0) await new Promise(r=>setTimeout(r, 10 + Math.random()*28));
-      }
-      await new Promise(r=>setTimeout(r, 60));
-      answerFront.classList.add('show');
-      categoryEl.textContent = `类别：${catLabel}`;
-      sparkleConfetti();
+    // 文字逐字显示（返回 Promise）
+    function typeText(targetEl, text, opts = {}) {
+      const delayMin = opts.delayMin ?? 8;
+      const delayMax = opts.delayMax ?? 28;
+      return new Promise(async (resolve) => {
+        targetEl.textContent = '';
+        for (let i = 0; i < text.length; i++) {
+          targetEl.textContent += text[i];
+          // small variable delay
+          const t = delayMin + Math.random() * (delayMax - delayMin);
+          await new Promise(r => setTimeout(r, t));
+        }
+        resolve();
+      });
     }
 
-    /* ===== Confetti ===== */
+    // 短暂 confetti 泡沫
     function sparkleConfetti(){
       const pieces = [];
       const w = window.innerWidth, h = window.innerHeight;
-      for(let i=0;i<90;i++){
+      for(let i=0;i<80;i++){
         pieces.push({
           x: w*0.5 + (Math.random()-0.5)*260,
           y: h*0.45 + (Math.random()-0.5)*120,
@@ -272,39 +265,56 @@ cd my-website
       }, 16);
     }
 
-    /* ===== 主流程：打开即揭晓 ===== */
-    async function autoReveal(){
-      const {text, cat} = getRandomAnswer();
-      await revealAnswerAuto(text, cat || '随机');
+    // 可靠的 reveal 流程：先打开书，清空文本，打字，显示 .show，触发 confetti
+    async function revealOnce(forceOpen = true){
+      try {
+        const {text, cat} = getRandomAnswer();
+        // 打开书视觉
+        if (forceOpen) bookEl.classList.add('open');
+        // 隐藏旧显示，再打字
+        answerFront.classList.remove('show');
+        await new Promise(r => setTimeout(r, 260)); // 短延迟保证样式应用
+        await typeText(answerText, text, {delayMin:10, delayMax:32});
+        // 显示并更新类别
+        categoryEl.textContent = `类别：${cat}`;
+        // small delay for polish
+        await new Promise(r => setTimeout(r, 80));
+        answerFront.classList.add('show');
+        // confetti
+        sparkleConfetti();
+      } catch (err) {
+        // 出错时至少把文本写上，避免空白
+        answerText.textContent = "发生错误，请在控制台查看 (或刷新页面)。";
+        answerFront.classList.add('show');
+        console.error(err);
+      }
     }
 
+    // 事件绑定
     anotherBtn.addEventListener('click', async ()=>{
       anotherBtn.disabled = true;
-      // 每次再来一条时显示新答案并短暂抖动翻页效果
-      await autoReveal();
-      setTimeout(()=>anotherBtn.disabled=false, 700);
+      await revealOnce(true);
+      setTimeout(()=> anotherBtn.disabled = false, 600);
     });
 
     toFront.addEventListener('click', ()=>{
-      // 回到书页（前页）
+      // 轻微回页效果：关闭再打开
       bookEl.classList.remove('open');
-      setTimeout(()=>bookEl.classList.add('open'), 80);
+      setTimeout(()=> bookEl.classList.add('open'), 80);
     });
 
-    // 页面加载后自动揭晓（并在首屏带入小延迟以呈现动画）
+    // 首次加载自动揭晓
     window.addEventListener('load', async ()=>{
-      // 初始提示文字
-      answerText.textContent = "正在为你揭晓一句话……";
+      // 首次显示友好提示（瞬间），然后揭晓真正答案
+      answerText.textContent = "页面正在准备答案，请稍候…";
       answerFront.classList.add('show');
-      // 轻微延迟后揭晓最终答案
+      // 给一点时间让页面完成渲染和样式计算
       setTimeout(async ()=>{
+        // 隐藏提示并揭晓真实内容
         answerFront.classList.remove('show');
-        await autoReveal();
-      }, 900);
+        await revealOnce(true);
+      }, 700);
     });
   </script>
 </body>
 </html>
-
-
-
